--- a/myreactapp/src/App.css
+++ b/myreactapp/src/App.css
@@ -47,7 +47,7 @@ li{
 #animals{
   background-color: white;
   width:250px;
-  font-weight: lighter;
+  font-weight: 100;
 }
 .yuzhi{
   width: 70px;
@@ -87,7 +87,10 @@ height: 100%;width:100%;overflow: hidden;}
   height: 30%;
 }
 .bold{
-  font-weight: bolder;
+  font-weight: 900;
+}
+th{
+  font-weight: 400;
 }
 .link-top {
             width: 100%;
