--- a/myreactapp/src/App.css
+++ b/myreactapp/src/App.css
@@ -1,10 +1,18 @@
 .input-range{
-  max-width:235px;
+  max-width:70%;
   margin:auto;
   margin-bottom: 18px;
   margin-top:20px;
   max-height: 10px;
-  right: 5px;
+  margin-left: 10px;
+  float:left;
+}
+#block{
+  overflow: hidden;
+}
+#col2{
+  margin-top: 18px;
+
 }
 .App-link {
   color: #09d3ac;
@@ -54,7 +62,7 @@ li{
 }
 #legend{
   margin-top: 4px;
-  
+  font-weight: 400;
   margin-left: 10px;
   margin-right: 10px;
 }
@@ -92,4 +100,8 @@ height: 100%;width:100%;overflow: hidden;}
 }
 th{
   font-weight: 400;
+}
+.dituming{
+  margin-left: 10px;
+  font-weight: 900;
 }
